fix XSLX export

--- a/views/interview.jade
+++ b/views/interview.jade
@@ -8,6 +8,6 @@ include includes/head
 				"type": "INTERVIEW_FORM",
 				"getUrl": "/api/forms/#{id}",
 				"postUrl": "/api/forms/#{id}/responses",
-				"redirectUrl": "/"
+				"redirectUrl": "/success"
 			}
 		script(type="text/javascript", src="/scripts/interview.js")
