--- a/views/responses.jade
+++ b/views/responses.jade
@@ -9,6 +9,6 @@ include includes/head
         "getUrl": "/api/forms/#{id}/responses",
         "responsePreviewUrl": "/forms/#{id}/responses/response_id",
         "buildReportUrl": "/api/forms/#{id}/reports",
-        "buildCSVUrl": "/api/forms/#{id}/responses/toCSV"
+        "buildCSVUrl": "/api/forms/#{id}/responses/xlsx"
       }
     script(type="text/javascript", src="/scripts/report.js")
