--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -4,7 +4,7 @@ nav#page-header.navbar.navbar-default.navbar-fixed-top
 			.col-md-2.col-lg-2.page-header-return
 				a.back(href='/')
 					//i#back.glyphicon.glyphicon-home
-					i.glyphicon.glyphicon-menu-left(aria-hidden='true')
+					i.fa.fa-arrow-left(aria-hidden='true')
 						// TODO: вставлять наименование страницы
 					span все формы
 			#header-root.col-md-10.col-lg-10
