--- a/views/signin.pug
+++ b/views/signin.pug
@@ -1,16 +1,16 @@
 include includes/head
 	title Вход | SuperForms
 body.no-header
-	#sign-up-container.container
+	#signin.container
 		div.col-md-3
 		div.col-md-6
-			h3 Авторизация
+			h3 Введите свой логин и пароль:
 
 			#error.alert.alert-danger.hide
 				a(href="#", class="close", data-dismiss="alert", aria-label="close") ×
 				p
-			div: input#login.form-control(type='text' placeholder="Электронная почта" required)
-			div: input#password.form-control(type='password' placeholder="Пароль" required)
+			input#login.form-control(type='text' placeholder="Электронная почта" required)
+			input#password.form-control(type='password' placeholder="Пароль" required)
 
 			button#submit.btn.btn-primary.btn-block Войти
 
