--- a/views/users.pug
+++ b/views/users.pug
@@ -1,34 +1,9 @@
 include includes/head
 	title Пользователи | SuperForms
-body
-	div.container
-		#reg.row
-			h3 Регистрация:
-			#error.alert.alert-danger.hide
-				a.close(href='#') ×
-				p
-			#info.alert.alert-info.hide
-				a.close(href='#') ×
-				p
-
-			div.col-md-5.reg
-				div: input#login.form-control(type='text' placeholder="Электронная почта" required)
-			div.col-md-5.reg
-				div: input#password.form-control(type='text' placeholder="Пароль" required)
-
-			div.col-md-1.reg
-				button#genPass.btn.btn-info.btn-block(data-toggle='tooltip', title='Сгенерировать пароль')
-					span.glyphicon.glyphicon-lock(aria-hidden='true')
-			div.col-md-1.reg
-				button#addUser.btn.btn-primary.btn-block(data-toggle='tooltip', title='Добавить пользователя')
-					span.glyphicon.glyphicon-plus(aria-hidden='true')
-
-		div.row
-			h3 Пользователи:
-			div.col-md-3 электронная почта
-			div.col-md-3 должность
-			div.col-md-3 статус
-		#users.row
-
-
-	script(type="text/javascript", src="/scripts/users.js")
+	body
+		#root.container
+		script(src="/scripts/react/react.js")
+		script(src="/scripts/react/react-dom.js")
+		script(src="/scripts/react/browser.min.js")
+		script(src="/scripts/react/eventEmitter.js")
+		script(type="text/babel", src="/scripts/users.js")
