--- a/views/preview.pug
+++ b/views/preview.pug
@@ -2,7 +2,17 @@ include includes/head
 	title Превью | SuperForms
 	link(rel="stylesheet", href="/styles/react-widgets.css")
 body
-	include includes/header
+	header.forms
+		nav.container
+			- if (isAdmin)
+				a.pull-left(href='/users') Пользователи
+			a.pull-left.pre-active(href='/') Формы
+			div.triangle.pull-left.triangle-left
+			a.pull-left.active Просмотр формы
+			div.triangle.pull-left.triangle-right
+			a.pull-right(href='#profile' title='Профиль' data-placement='left')
+				span.glyphicon.glyphicon-user
+
 	div#root.container
 	script#info(type="application/json").
 		{
