--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,7 +3,13 @@
 }
 
 body {
-  padding-top: 70px;
+  background-color: #fcfcfc;
+  /*padding-top: 70px;*/
+  color: #333;
+}
+
+input {
+  background-color: inherit !important;
 }
 
 body.no-header {
@@ -332,12 +338,18 @@ table .form-group {
   margin-bottom: 15px;
 }
 
-#reg > .registration,
-#users > div  {
-  text-overflow: ellipsis;
+#reg > .registration {
   padding-left: 3px;
   padding-right: 3px;
   margin-bottom: 5px;
+}
+
+#reg > div.registration:first-of-type {
+  padding-left: 0;
+}
+
+#reg > div.registration:last-of-type {
+  padding-right: 0;
 }
 
 #reg:after { 
@@ -345,4 +357,114 @@ table .form-group {
   display: block; 
   height: 0; 
   clear: both;
+}
+
+
+header { 
+  height: 40px;
+  background-color: #f0ad4e;
+  border-color: #eea236;
+}
+
+header.error {
+  background-color: #d9534f;
+  border-color: #d43f3a;
+}
+
+header.users {
+  background-color: #5bc0de;
+  border-color: #46b8da;
+}
+
+header.forms {
+  background-color: #337ab7;
+  border-color: #2e6da4;
+}
+
+header.responses {
+  background-color: #5cb85c;
+  border-color: #4cae4c;
+}
+
+
+header nav.container {
+  height: 100%;
+  text-align: center;
+  line-height: 38px;
+}
+
+header nav.container > a {
+  padding-left: 30px;
+  padding-right: 30px;
+  height: 100%;
+  line-height: 38px;
+  font-size: 18px;
+  color: #fcfcfc;
+}
+
+header nav.container > a.pre-active {
+  padding-right: 42px;
+  margin-right: -12px;
+}
+
+header nav.container > a.active {
+  background-color: #fcfcfc;
+  color: #666;
+}
+
+header nav.container > a.post-active {
+  padding-left: 42px;
+  margin-left: -12px;
+}
+
+header nav.container > a:hover {
+  text-decoration: none;
+}
+
+header nav.container > a:not(.active):hover {
+  background-color: #f0ad4e;
+  border-color: #eea236;
+}
+
+header.error nav.container > a:not(.active):hover {
+  background-color: #c9302c;
+  border-color: #ac2925;
+}
+
+header.users nav.container > a:not(.active):hover {
+  background-color: #31b0d5;
+  border-color: #269abc;
+}
+
+header.forms nav.container > a:not(.active):hover {
+  background-color: #286090;
+  border-color: #204d74;
+}
+
+header.responses nav.container > a:not(.active):hover {
+  background-color: #449d44;
+  border-color: #398439;
+}
+
+header nav.container span {
+  font-size: 16px;
+  line-height: 38px;
+  color: white;
+}
+
+header .triangle {
+  width: 0; 
+  height: 0; 
+  z-index: 2 !important;
+}
+
+header .triangle-left {
+  border-top: 40px solid transparent; 
+  border-right: 12px solid #fcfcfc; 
+  /*margin-left: -12px;*/
+}
+
+header .triangle-right {
+  border-top: 40px solid transparent; 
+  border-left: 12px solid #fcfcfc; 
 }
