--- a/views/error.pug
+++ b/views/error.pug
@@ -1,7 +1,18 @@
 include includes/head
 	title Ошибка | SuperForms
 body
-	include includes/header
+	header.error
+		nav.container
+			- if (isUser)
+				- if (isAdmin)
+					a.pull-left(href='/users') Пользователи
+				a.pull-left(href='/') Формы
+				a.pull-right(href='#profile' title='Профиль' data-placement='left')
+					span.glyphicon.glyphicon-user
+			- else 
+				a.col-xs-1.pull-right(href='#signin' title='Войти' data-placement='left')
+					span.glyphicon.glyphicon-log-in
+
 	div.container
 		h2 Извините, произошла ошибка.
 		p #{error.message}
