--- a/views/generation&edit.pug
+++ b/views/generation&edit.pug
@@ -3,7 +3,20 @@ head
 	title #{title} | SuperForms
 	link(rel="stylesheet", href="/styles/react-widgets.css")
 body
-	include includes/header
+	header.forms
+		nav.container
+			- if (isAdmin)
+				a.pull-left(href='/users') Пользователи
+			a.pull-left.pre-active(href='/') Формы
+			div.triangle.pull-left.triangle-left
+			- if (type === 'CREATE_FORM')
+				a.pull-left.active Создание формы
+			- else
+				a.pull-left.active Редактирование формы
+			div.triangle.pull-left.triangle-right
+			a.pull-right(href='#profile' title='Профиль' data-placement='left')
+				span.glyphicon.glyphicon-user
+
 	div#root.container
 	script#info(type="application/json").
 		{
