--- a/views/message.pug
+++ b/views/message.pug
@@ -1,10 +1,18 @@
 include includes/head
 	title Сообщение | SuperForms
 body
-	nav#page-header.navbar.navbar-default.navbar-fixed-top
-		.container
-			.row
-				.col-md-2.col-lg-2.page-header-return
+	header.error
+		nav.container
+			- if (isUser)
+				- if (isAdmin)
+					a.pull-left(href='/users') Пользователи
+				a.pull-left(href='/') Формы
+				a.pull-right(href='#profile' title='Профиль' data-placement='left')
+					span.glyphicon.glyphicon-user
+			- else 
+				a.pull-right(href='#signin' title='Войти' data-placement='left')
+					span.glyphicon.glyphicon-log-in
+
 	div.container
 		h3 #{title}
 		p #{text}
