--- a/views/response.pug
+++ b/views/response.pug
@@ -2,16 +2,18 @@ include includes/head
 	title Просмотр ответа| SuperForms
 	link(rel="stylesheet", href="/styles/react-widgets.css")
 body
-	nav#page-header.navbar.navbar-default.navbar-fixed-top
-		.container
-			.row
-				.col-md-2.col-lg-2.page-header-return
-					a.back(href='/forms/' + id + '/responses')
-						i.glyphicon.glyphicon-menu-left(aria-hidden='true')
-						// TODO: вставлять наименование страницы
-						span все ответы
-				#header-root.col-md-10.col-lg-10
-					// Здесь динамичное содержимое шапки
+	header.responses
+		nav.container
+			- if (isAdmin)
+				a.pull-left(href='/users') Пользователи
+			a.pull-left(href='/') Формы
+			a.pull-left.pre-active(href='/forms/' + id + '/responses') Ответы
+			div.triangle.pull-left.triangle-left
+			a.pull-left.active Просмотр ответа
+			div.triangle.pull-left.triangle-right
+			a.pull-right(href='#profile' title='Профиль' data-placement='left')
+				span.glyphicon.glyphicon-user
+		
 	div#root.container
 	script#info(type="application/json").
 		{
