--- a/views/forms.pug
+++ b/views/forms.pug
@@ -9,9 +9,10 @@ body
 			div.triangle.pull-left.triangle-left
 			a.pull-left.active Формы
 			div.triangle.pull-left.triangle-right
-			a.pull-right(href='#profile' title='Профиль' data-placement='left')
-				span.glyphicon.glyphicon-user
+			include includes/signout
 	
+	div.container.create-form
+		a.btn.btn-success(href="/forms/new") Создать форму 
 	div#root.container
 	script#info(type="application/json").
 		{
