--- a/views/response.pug
+++ b/views/response.pug
@@ -6,13 +6,12 @@ body
 		nav.container
 			- if (isAdmin)
 				a.pull-left(href='/users') Пользователи
-			a.pull-left(href='/') Формы
-			a.pull-left.pre-active(href='/forms/' + id + '/responses') Ответы
-			div.triangle.pull-left.triangle-left
-			a.pull-left.active Просмотр ответа
-			div.triangle.pull-left.triangle-right
-			a.pull-right(href='#profile' title='Профиль' data-placement='left')
-				span.glyphicon.glyphicon-user
+			a(href='/forms') Формы
+			a.pre-active(href='/forms/' + id + '/responses') Ответы
+			div.triangle.triangle-left
+			a.active Просмотр ответа
+			div.triangle.triangle-right
+			include includes/signout
 		
 	div#root.container
 	script#info(type="application/json").
