--- a/views/responses.pug
+++ b/views/responses.pug
@@ -5,12 +5,11 @@ body
 		nav.container
 			- if (isAdmin)
 				a.pull-left(href='/users') Пользователи
-			a.pull-left.pre-active(href='/') Формы
+			a.pull-left.pre-active(href='/forms') Формы
 			div.triangle.pull-left.triangle-left
 			a.pull-left.active Ответы
 			div.triangle.pull-left.triangle-right
-			a.pull-right(href='#profile' title='Профиль' data-placement='left')
-				span.glyphicon.glyphicon-user
+			include includes/signout
 					
 	div#root.container
 	script#info(type="application/json").
