--- a/views/users.pug
+++ b/views/users.pug
@@ -3,12 +3,11 @@ include includes/head
 	body
 		header.users
 			nav.container
-				div.triangle.pull-left.triangle-left
-				a.pull-left.active Пользователи
-				div.triangle.pull-left.triangle-right
-				a.pull-left.post-active(href='/') Формы
-				a.pull-right(href='#profile' title='Профиль' data-placement='left')
-					span.glyphicon.glyphicon-user
+				div.triangle.triangle-left
+				a.active Пользователи
+				div.triangle.triangle-right
+				a.post-active(href='/forms') Формы
+				include includes/signout
 
 			
 		#root.container
