--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -8,8 +8,7 @@ body {
 }
 
 input,
-button.btn-default,
-.Select div, .Select span, .Select input{
+button.btn-default {
   background-color: #fefefe !important;
 }
 
@@ -402,10 +401,11 @@ header nav.container > a {
   line-height: 38px;
   font-size: 18px;
   font-size: 14px;
-  /*font-weight: bold;*/
   text-transform: uppercase;
   color: #fefefe;
+  outline: none;
 }
+
 
 header nav.container > a.pre-active {
   padding-right: 42px;
@@ -419,7 +419,7 @@ header nav.container > a.active {
 }
 
 header nav.container > a.post-active {
-  padding-left: 42px;
+  /*padding-left: 42px;*/
   margin-left: -12px;
 }
 
@@ -484,7 +484,6 @@ div.container.message {
 
 .create-form {
   /*height: 0;*/
- 
 }
 
 .create-form > a {
