add journal change db tables add authentication encryption add registration confirmation fix export to XLSX

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -232,6 +232,10 @@ table .form-group {
 
 }
 
+.form-generator-preview-wrapper > .super-form {
+  margin-top: 25px;
+}
+
 .form-generator {
   
 }
@@ -362,6 +366,9 @@ table .form-group {
 
 header { 
   height: 40px;
+}
+
+header.interview {
   background-color: #f0ad4e;
   border-color: #eea236;
 }
@@ -377,8 +384,8 @@ header.users {
 }
 
 header.forms {
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: #6391b9;
+  border-color: #4377a4;
 }
 
 header.responses {
@@ -389,7 +396,6 @@ header.responses {
 
 header nav.container {
   height: 100%;
-  line-height: 38px;
 }
 
 header nav.container > a {
@@ -416,6 +422,7 @@ header nav.container > a.active {
   background-color: #fefefe;
   color: #555;
   z-index: 2 !important;
+  /*border-radius: 10px;*/
 }
 
 header nav.container > a.post-active {
@@ -487,9 +494,77 @@ div.container.message {
 }
 
 .create-form > a {
-   /*width: 171px;*/
   position: relative;
   top: 15px;
   float: right;
-  /*margin-bottom: -34px;*/
+}
+
+#journal tr {
+  cursor: pointer;
+}
+
+#journal th {
+  line-height: 16px;
+}
+
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  vertical-align: middle;
+  margin-left: 7px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {display:none;}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #337ab7;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
