--- a/views/users.pug
+++ b/views/users.pug
@@ -6,13 +6,13 @@ include includes/head
 				div.triangle.triangle-left
 				a.active Пользователи
 				div.triangle.triangle-right
-				a.post-active(href='/forms') Формы
+				a.post-active(href='/journal') Журнал
+				a(href='/forms') Формы
 				include includes/signout
 
-			
 		#root.container
-		script(src="/scripts/react/react.js")
-		script(src="/scripts/react/react-dom.js")
+		script(src="/scripts/react/react.min.js")
+		script(src="/scripts/react/react-dom.min.js")
 		script(src="/scripts/react/browser.min.js")
 		script(src="/scripts/react/eventEmitter.js")
 		script(type="text/babel", src="/scripts/users.js")
