--- a/views/users.pug
+++ b/views/users.pug
@@ -13,6 +13,5 @@ include includes/head
 		#root.container
 		script(src="/scripts/react/react.min.js")
 		script(src="/scripts/react/react-dom.min.js")
-		script(src="/scripts/react/browser.min.js")
 		script(src="/scripts/react/eventEmitter.js")
-		script(type="text/babel", src="/scripts/users.js")
+		script(type="text/javascript", src="/scripts/users.js")
