--- a/views/includes/signin.pug
+++ b/views/includes/signin.pug
@@ -1,2 +1,2 @@
-a.pull-right(href='/' title='Войти' data-placement='left')
+a.post-active.pull-right(href='/' title='Войти' data-placement='left')
 	span.glyphicon.glyphicon-log-in
