--- a/views/includes/signout.pug
+++ b/views/includes/signout.pug
@@ -1,2 +1,2 @@
-a.pull-right(href='/signout' title='Выйти' data-placement='left')
+a.post-active.pull-right(href='/signout' title='Выйти' data-placement='left')
 	span.glyphicon.glyphicon-user
