--- a/views/signin.pug
+++ b/views/signin.pug
@@ -7,7 +7,7 @@ body.no-header
 			h3 Введите логин и&nbsp;пароль:
 
 			#error.alert.alert-danger.hide
-				a(href="#", class="close", data-dismiss="alert", aria-label="close") ×
+				a(class="close", data-dismiss="alert", aria-label="close") ×
 				p
 			input#login.form-control(type='text' placeholder="Электронная почта" autofocus)
 			input#password.form-control(type='password' placeholder="Пароль")
