--- a/views/users.pug
+++ b/views/users.pug
@@ -6,8 +6,7 @@ include includes/head
 				div.triangle.triangle-left
 				a.active Пользователи
 				div.triangle.triangle-right
-				a.post-active(href='/journal') Журнал
-				a(href='/forms') Формы
+				a.post-active(href='/forms') Формы
 				include includes/signout
 
 		#root.container
