--- a/views/response.pug
+++ b/views/response.pug
@@ -1,12 +1,11 @@
 include includes/head
-	title Просмотр ответа| SuperForms
+	title Просмотр ответа | SuperForms
 	link(rel="stylesheet", href="/styles/react-widgets.css")
 body
 	header.responses
-		nav.container
+		nav.narrow.container
 			- if (isAdmin)
 				a(href='/users') Пользователи
-			a(href='/journal') Журнал
 			a(href='/forms') Формы
 			a.pre-active(href='/forms/' + id + '/responses') Ответы
 			div.triangle.triangle-left
@@ -14,7 +13,7 @@ body
 			div.triangle.triangle-right
 			include includes/signout
 		
-	div#root.container
+	div#root.narrow.container
 	script#info(type="application/json").
 		{
 			"type": "ANSWER_REVIEW",
