--- a/views/forms.pug
+++ b/views/forms.pug
@@ -14,7 +14,7 @@ body
 	div.wide.container.create-form
 		a.btn.btn-success(href="/forms/new") Создать форму 
 	div#root.wide.container
-	script#info(type="application/json").
+	script#config(type="application/json").
 		{
 			"getUrl": "/api/forms",
 			"postUrl": "/api/answers/",
