--- a/views/generation&edit.pug
+++ b/views/generation&edit.pug
@@ -17,7 +17,7 @@ body
 			include includes/signout
 
 	div#root.container
-	script#info(type="application/json").
+	script#config(type="application/json").
 		{
 			"type": "#{type}",
 			"getUrl": "/api/forms/#{id}",
