--- a/views/preview.pug
+++ b/views/preview.pug
@@ -14,7 +14,7 @@ body
 	//- div.col-md-4
 	div#root.narrow.container
 	//- div.col-md-4
-	script#info(type="application/json").
+	script#config(type="application/json").
 		{
 			"type": "PREVIEW_FORM",
 			"getUrl": "/api/forms/#{id}",
