--- a/views/interview.pug
+++ b/views/interview.pug
@@ -20,7 +20,7 @@ body
 				include includes/signin
 
 	div#root.narrow.container
-	script#info(type="application/json").
+	script#config(type="application/json").
 		{
 			"type": "INTERVIEW_FORM",
 			"getUrl": "/api/forms/#{id}",
