fix conversion to number during excel-export

--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -5,4 +5,5 @@ html(lang="en")
 		link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css")
 		link(rel="stylesheet", href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css")
 		link(rel="stylesheet", href="/styles/main.css")
+		link(rel="stylesheet", href="/styles/test.css")
 		link(rel="stylesheet", href="https://unpkg.com/react-select/dist/react-select.css")
