--- a/views/response.pug
+++ b/views/response.pug
@@ -17,6 +17,6 @@ body
 	script#config(type="application/json").
 		{
 			"type": "ANSWER_REVIEW",
-			"getUrl": "/api/forms/#{id}/responses/#{response_id}"
+			"getUrl": "/api/forms/#{form_id}/responses/#{response_id}"
 		}
 	script(type="text/javascript", src="/scripts/interview.js")
