add long-polling for responses list; modify logging

--- a/views/responses.pug
+++ b/views/responses.pug
@@ -14,4 +14,4 @@ body
 	div#root.wide.container
 	script#config(type="application/json").
 		!{JSON.stringify(config)}
-	script(type="text/javascript", src="/scripts/report.js")
+	script(type="text/javascript", src="/scripts/responses.js")
